# astrid

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  app.py  astrid_cli.py  astrid_core.py  astrid_image_io.py  astrid_label_noise.py  audit_history.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
docs/: README.md  images.md  index.html  paper_blueprint.md  tabular.md  time_series.md
experiments/: README.md  _award_image_analyzer.py  _award_statlib.py  _combined_axis_probe.py  _fragile_probe.py  _lr_sensitivity.py  _screen.py  _validate_hrss.py  _validate_new.py  analyze_reliability_vs_performance.py  fault_injection_tabular.py  fragile_vs_robust_clean.py  p1_award_stats.py  p1_crossmodal_image.py  p1_crossmodal_timeseries.py  p1_runtime_scaling.py  p2_ablation.py  p2_analyze.py  p2_detection_grid.py  p2_make_figures.py  p2_realdata_carriers.py  p2_reference_agreement.py  paper1_make_figures.py  paper2_downstream_collect.py  paper2_fix_figures.py  paper2_gate_ablation.py  paper2_make_figures.py  reliability_vs_performance.py  reliability_vs_performance_report.md  subscore_vs_performance.py  tabular_fault_injection_paper_dossier.md
pages/: 01_Tabular.py  02_Time_Series.py  03_Images.py  04_Drift_experimental.py  04_Images_experimental.py  05_Audit_History.py  05_Drift_experimental.py  06_Cross_Dataset_Drift.py
paper/: astrid_top_tier_paper.tex
tests/: test_astrid_cli.py  test_astrid_core.py  test_astrid_image_io.py  test_audit_history.py  test_label_noise.py  test_utils.py
tools/: generate_presentation_images.py
